src/test/deca/context/invalid/expr_cast_null_to_Object.deca
// Test of the rule (3.39) : can't cast null to Object.

{
	Object var1;
	null var2;
	var1 = (Object)(var2);
}

// Résultat :
//# a
